--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <div class="col-md-5 center-item">
                                 <div class="input-group number-spinner">
                                     <button id="decreaseItem" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                                    <input type="text" id="inputValue" class="form-control text-center" value="1">
+                                    <input type="text" id="inputValue" class="form-control text-center" value="0">
                                     <button id="plusItem" class="btn btn-default"><i class="fas fa-plus"></i></button>
                                 </div>
-                                <h5>$ <span id="phonePrice">1219</span></h5>
+                                <h5>$ <span id="phonePrice">00</span></h5>
                                 <img src="images/remove.png" alt="" class="remove-item">
                             </div>
                         </div>
@@ -44,11 +44,11 @@
                             <div class="col-md-5 center-item">
                                 <div class="input-group number-spinner">
                                     <button id="caseDec" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                                    <input id="caseInput" type="text" class="form-control text-center" value="1">
+                                    <input id="caseInput" type="text" class="form-control text-center" value="0">
                                     <button id="caseIncrease" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                                 </div>
-                                <h5>$59</h5>
+                                <h5>$ <span id="casePrice">00</span></h5>
                                 <img src="images/remove.png" alt="" class="remove-item">
                             </div>
                         </div>
@@ -64,9 +64,9 @@
                             </div>
 
                             <div class="col-md-4 status">
-                                <h5>$1,278</h5>
+                                <h5>$ <span id="subTotal">0</span></h5>
                                 <h5>$0</h5>
-                                <h5>$1,278</h5>
+                                <h5>$ <span id="total">0</span></h5>
                             </div>
                         </div>
                     </div>
